Find feature: Update to only accept single inputs for name and address